--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Advanced Image Processing Suite</title>
+    <title>FluxTrim - 图像处理工具</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.7.1/jszip.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
@@ -11,7 +11,9 @@
 <body>
     <div class="container">
         <header>
-            <h1>Advanced Image Processing Suite</h1>
+            <div class="logo-container">
+                <img src="img/fluxtrim-logo.png" alt="FluxTrim Logo" class="logo">
+            </div>
             <p class="subtitle">Professional tools for image optimization and conversion</p>
         </header>
 
