--- a/mobile.html
+++ b/mobile.html
@@ -3,10 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Advanced Image Processing Suite - Mobile</title>
+    <title>FluxTrim - 图像处理工具</title>
     <link rel="stylesheet" href="css/mobile.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
 </head>
 <body>
+    <header class="mobile-header">
+        <div class="logo-container">
+            <img src="img/fluxtrim-logo.png" alt="FluxTrim Logo" class="logo">
+        </div>
+        <h1>FluxTrim</h1>
+        <p class="tagline">专业的图像处理工具</p>
+    </header>
+
     <div class="container">
         <header>
             <h1>Advanced Image Processing Suite</h1>
